# file-deduplication

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: actions.rs  dedup.rs  lib.rs  main.rs  scanner.rs  utils.rs
